[gd_scene load_steps=7 format=2]

[ext_resource path="res://CanOfBeans.gd" type="Script" id=1]
[ext_resource path="res://img/Can_of_Beans_01_active.png" type="Texture" id=2]
[ext_resource path="res://snd/FX/Beans_02.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "std"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 3 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 26 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 0 )

[node name="CanOfBeans" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.19087 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "std"
anims/std = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 16
lifetime = 2.0
emission_shape = 2
emission_rect_extents = Vector2( 22, 26 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 1.0
scale_amount = 3.0
color_ramp = SubResource( 3 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="BeanPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_CanOfBeans_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="queue_free"]
